--- a/Dutluk/AndroidManifest.xml
+++ b/Dutluk/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -34,6 +35,9 @@
         </activity>
         <activity
             android:name="com.android.dutluk.AddStoryActivity" >
+        </activity>
+          <activity
+            android:name="com.android.dutluk.ShowStoryActivity" >
         </activity>
     </application>
 
