--- a/Dutluk/AndroidManifest.xml
+++ b/Dutluk/AndroidManifest.xml
@@ -5,10 +5,18 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+	
+	<uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -35,6 +43,19 @@
         <activity
             android:name="com.android.dutluk.AddStoryActivity" >
         </activity>
+        <activity android:name="com.android.dutluk.MapActivity" >
+        </activity>
+        <activity android:name="com.android.dutluk.ShowStoryActivity" >
+        </activity>
+        
+        
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBLGKzSY8FFQL6Rz92BJtg1D6isZRbC3Sc" />
+        <meta-data
+    android:name="com.google.android.gms.version"
+    android:value="@integer/google_play_services_version" />
+        
     </application>
 
 </manifest>
