--- a/Dutluk/bin/AndroidManifest.xml
+++ b/Dutluk/bin/AndroidManifest.xml
@@ -11,10 +11,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-	
-	<uses-feature
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
 
@@ -23,45 +23,34 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name="com.android.dutluk.LoginActivity" >
+        <activity android:name="com.android.dutluk.LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.android.dutluk.RegisterActivity" >
+        <activity android:name="com.android.dutluk.RegisterActivity" >
         </activity>
-        <activity
-            android:name="com.android.dutluk.ProfileActivity" >
+        <activity android:name="com.android.dutluk.ProfileActivity" >
         </activity>
-         <activity
-            android:name="com.android.dutluk.ForgotPwdActivity" >
+        <activity android:name="com.android.dutluk.ForgotPwdActivity" >
         </activity>
-        <activity
-            android:name="com.android.dutluk.AddStoryActivity" >
+        <activity android:name="com.android.dutluk.AddStoryActivity" >
         </activity>
-        <activity 
-            android:name="com.android.dutluk.MapActivity" >
+        <activity android:name="com.android.dutluk.MapActivity" >
         </activity>
-        <activity 
-            android:name="com.android.dutluk.ShowStoryActivity" >
+        <activity android:name="com.android.dutluk.ShowStoryActivity" >
         </activity>
-        <activity 
-            android:name="com.android.dutluk.TimelineActivity" >
+        <activity android:name="com.android.dutluk.TimelineActivity" >
         </activity>
-        
-        
-        
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBLGKzSY8FFQL6Rz92BJtg1D6isZRbC3Sc" />
+            android:value="AIzaSyDdirTMlA8MAL0ua5K_6pIzAi0WIacYi-o" />
         <meta-data
-    android:name="com.google.android.gms.version"
-    android:value="@integer/google_play_services_version" />
-        
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
