--- a/Dutluk/bin/AndroidManifest.xml
+++ b/Dutluk/bin/AndroidManifest.xml
@@ -44,6 +44,8 @@
         </activity>
         <activity android:name="com.android.dutluk.TimelineActivity" >
         </activity>
+        <activity android:name="com.android.dutluk.SearchActivity" >
+        </activity>
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
