--- a/LoginActivity/project.properties
+++ b/LoginActivity/project.properties
@@ -11,5 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-20
+target=Google Inc.:Glass Development Kit Preview:19
 android.library.reference.1=../google-play-services_lib/google-play-services_lib
